# unfollowed

./: .gitignore  README.md  main.py  pyproject.toml
src/unfollowed/: bot.py  cli.py  constants.py  utils.py
