[project]
name = "unfollowed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "ethancobos1@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "selenium>=4.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
